{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 5,
  "lineage": "560dc8a7-0707-c546-3333-066d411ae47e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group/sg-0e2e78202a2c8fc0b",
            "description": "security_group created from Terraform",
            "egress": [],
            "id": "sg-0e2e78202a2c8fc0b",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "348144893552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0055ae8b4cfdb08cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-010c2b9adb4d0fcfa",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-010c2b9adb4d0fcfa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2e78202a2c8fc0b",
            "security_group_rule_id": "sgr-010c2b9adb4d0fcfa",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-0318b7b2dc68e7d3e",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0318b7b2dc68e7d3e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2e78202a2c8fc0b",
            "security_group_rule_id": "sgr-0318b7b2dc68e7d3e",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-04551ff77bdbb0939",
            "cidr_ipv4": "200.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04551ff77bdbb0939",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2e78202a2c8fc0b",
            "security_group_rule_id": "sgr-04551ff77bdbb0939",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}